(2002/01/02 - broeker) Updated files supplied or generated by automake to 
	               version 1.4-p5, the current recommended version in the
		       1.4 series.
(2002/01/02 - broeker) Add handling of "quoted filenames with blanks in" in
	               namelist files
(2001/11/22 - broeker) Quell some compiler warnings caused by missing #includes
	               and private declarations of system library functions.
(2001/10/30 - petrs)   Added Joe Steffen to author's list as the creator.
(2001/10/19 - broeker) Replace usages of freopen() by fclose()/fopen() pairs
		       to work around bug in some Linux libc constellation.
(2001/10/10 - broeker) Remove unused argument 'name' of addsrcfile() function.
	               Alternative buffer overflow protection scheme, using
		       "%.*s" format specifiers in ordinary sprintf(); now used
		       throughout dir.c.
(2001/10/09 - valentin) Prevention of a possible buffer overflow.
(2001/09/27 - broeker) Added autoconf test to use Cygwin's separate
                       -lregex. The regcomp() in libc is not what we want.
(2001/09/13 - broeker) Move chunk for malformed CPP directives further down, so
	               it won't incorrectly eat up #else or #endif directives.
		       Fixes bug #460345.
(2001/08/27 - broeker) Add C++-style comments to {comment} pattern. Fixes
	               bug #455441: C++ comments in the middle of a function 
		       definition caused it not be recognized.
(2001/08/15 - broeker) Zero out 'disprefs' whenever the count of references, 
	               'totallines' is set to zero. This makes sure that you 
		       can't <Tab> into the selection area if there's nothing 
		       in it.
(2001/08/13 - jcduell) Revisited inverted index file name fixup routines.
                       (Patch #444669 from SourceForge).
(2001/08/03 - broeker) Use %option noyywrap in fscanner.l to avoid problems
	               with broken flex installations that can't find -lfl. 