@@ -106,6 +106,25 @@ char	*memset();
 # endif
 #endif
 
+/* HBB 20020103: Need to force text or binary mode opens on Cygwins,
+ * because of their "binary/text mode mount" silliness :-( */
+#ifndef O_TEXT
+# ifdef _O_TEXT
+#  define O_TEXT _O_TEXT
+# else
+#  define O_TEXT 0x00
+# endif
+#endif
+/* Same for binary mode --- moved here from vp.h */
+#ifndef O_BINARY
+# ifdef _O_BINARY
+#  define O_BINARY _O_BINARY
+# else
+#  define O_BINARY 0x00
+# endif
+#endif 
+
+
 typedef	enum	{		/* boolean data type */
 	NO,
 	YES
